kubernetes/apps/kyverno/kyverno/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kyverno-dashboard
spec:
  hostnames: ["kyverno-reports.home-ops.dev.nxyzo.com"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kyverno-reports-controller
          namespace: kyverno
          port: 80
